# zip_sendto

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SPEC.md  install.ps1
installer/: setup.iss
src/: args.rs  compress.rs  config.rs  error.rs  extract.rs  lib.rs  main.rs  path.rs  ui.rs
tests/: roundtrip.rs
tests/common/: mod.rs
