[package]
name    = "zip_sendto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zip_sendto"
path = "src/main.rs"

[dependencies]
zip       = { version = "2", default-features = false, features = ["deflate-zlib-ng"] }
walkdir   = "2"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
zip = { version = "2", default-features = false }

[profile.release]
opt-level = 3
lto       = true
strip     = true
panic     = "abort"
